@@ -7,8 +7,7 @@
       <Unit0>
         <Filename Value="testsuite.lpr"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="4"/>
-        <TopLine Value="105"/>
+        <TopLine Value="93"/>
         <CursorPos X="49" Y="132"/>
         <UsageCount Value="92"/>
         <Loaded Value="True"/>
@@ -16,27 +15,25 @@
       <Unit1>
         <Filename Value="TestManager.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="-1"/>
-        <WindowIndex Value="1"/>
-        <TopLine Value="540"/>
-        <CursorPos X="22" Y="564"/>
+        <EditorIndex Value="1"/>
+        <TopLine Value="709"/>
+        <CursorPos X="48" Y="727"/>
         <UsageCount Value="92"/>
+        <Loaded Value="True"/>
       </Unit1>
       <Unit2>
         <Filename Value="Test1.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="6"/>
+        <EditorIndex Value="-1"/>
         <CursorPos Y="14"/>
         <UsageCount Value="92"/>
-        <Loaded Value="True"/>
       </Unit2>
       <Unit3>
         <Filename Value="test2.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="7"/>
+        <EditorIndex Value="-1"/>
         <CursorPos X="80" Y="24"/>
         <UsageCount Value="92"/>
-        <Loaded Value="True"/>
       </Unit3>
       <Unit4>
         <Filename Value="Test3.pas"/>
@@ -186,12 +183,10 @@
       </Unit18>
       <Unit19>
         <Filename Value="../client/3.0/FB30ClientAPI.pas"/>
-        <IsVisibleTab Value="True"/>
-        <EditorIndex Value="5"/>
+        <EditorIndex Value="-1"/>
         <TopLine Value="348"/>
         <CursorPos Y="362"/>
         <UsageCount Value="11"/>
-        <Loaded Value="True"/>
       </Unit19>
       <Unit20>
         <Filename Value="../client/3.0/firebird/Firebird.pas"/>
@@ -201,27 +196,24 @@
       </Unit20>
       <Unit21>
         <Filename Value="../client/FBOutputBlock.pas"/>
-        <EditorIndex Value="8"/>
+        <EditorIndex Value="-1"/>
         <TopLine Value="106"/>
         <CursorPos X="84" Y="19"/>
         <UsageCount Value="19"/>
-        <Loaded Value="True"/>
       </Unit21>
       <Unit22>
         <Filename Value="../client/FBAttachment.pas"/>
-        <EditorIndex Value="11"/>
+        <EditorIndex Value="-1"/>
         <TopLine Value="178"/>
         <CursorPos X="53" Y="193"/>
         <UsageCount Value="14"/>
-        <Loaded Value="True"/>
       </Unit22>
       <Unit23>
         <Filename Value="../client/FBClientAPI.pas"/>
-        <EditorIndex Value="12"/>
+        <EditorIndex Value="-1"/>
         <TopLine Value="116"/>
         <CursorPos X="29" Y="135"/>
         <UsageCount Value="21"/>
-        <Loaded Value="True"/>
       </Unit23>
       <Unit24>
         <Filename Value="../client/3.0/FB30Attachment.pas"/>
@@ -256,8 +248,10 @@
       </Unit27>
       <Unit28>
         <Filename Value="../IB.pas"/>
-        <TopLine Value="592"/>
-        <CursorPos X="58" Y="613"/>
+        <IsVisibleTab Value="True"/>
+        <EditorIndex Value="2"/>
+        <TopLine Value="1179"/>
+        <CursorPos X="29" Y="109"/>
         <UsageCount Value="39"/>
         <Loaded Value="True"/>
       </Unit28>
@@ -364,27 +358,24 @@
       </Unit42>
       <Unit43>
         <Filename Value="../client/3.0/FB30Array.pas"/>
-        <EditorIndex Value="3"/>
+        <EditorIndex Value="-1"/>
         <TopLine Value="81"/>
         <CursorPos X="69" Y="101"/>
         <UsageCount Value="12"/>
-        <Loaded Value="True"/>
       </Unit43>
       <Unit44>
         <Filename Value="../client/2.5/FB25ClientAPI.pas"/>
-        <EditorIndex Value="9"/>
+        <EditorIndex Value="-1"/>
         <TopLine Value="199"/>
         <CursorPos X="50" Y="220"/>
         <UsageCount Value="12"/>
-        <Loaded Value="True"/>
       </Unit44>
       <Unit45>
         <Filename Value="../client/2.5/IBHeader.pas"/>
-        <EditorIndex Value="13"/>
+        <EditorIndex Value="-1"/>
         <TopLine Value="536"/>
         <CursorPos X="61" Y="567"/>
         <UsageCount Value="19"/>
-        <Loaded Value="True"/>
       </Unit45>
       <Unit46>
         <Filename Value="../../ibx/runtime/IBDatabaseInfo.pas"/>
@@ -409,19 +400,17 @@
       </Unit48>
       <Unit49>
         <Filename Value="/usr/share/fpcsrc/rtl/inc/systemh.inc"/>
-        <EditorIndex Value="14"/>
+        <EditorIndex Value="-1"/>
         <TopLine Value="317"/>
         <CursorPos X="3" Y="336"/>
         <UsageCount Value="20"/>
-        <Loaded Value="True"/>
       </Unit49>
       <Unit50>
         <Filename Value="../client/FBEvents.pas"/>
-        <EditorIndex Value="1"/>
+        <EditorIndex Value="-1"/>
         <TopLine Value="117"/>
         <CursorPos X="73" Y="144"/>
         <UsageCount Value="26"/>
-        <Loaded Value="True"/>
       </Unit50>
       <Unit51>
         <Filename Value="../client/3.0/FB30Events.pas"/>
@@ -442,8 +431,7 @@
       <Unit53>
         <Filename Value="../changelog"/>
         <EditorIndex Value="-1"/>
-        <WindowIndex Value="1"/>
-        <CursorPos X="32" Y="3"/>
+        <CursorPos X="30" Y="9"/>
         <UsageCount Value="19"/>
         <DefaultSyntaxHighlighter Value="None"/>
       </Unit53>
@@ -511,147 +499,35 @@
       </Unit61>
       <Unit62>
         <Filename Value="../client/FBParamBlock.pas"/>
-        <EditorIndex Value="2"/>
-        <TopLine Value="134"/>
-        <CursorPos Y="165"/>
-        <UsageCount Value="16"/>
-        <Loaded Value="True"/>
-      </Unit62>
-      <Unit63>
-        <Filename Value="../../fbintf/client/FBParamBlock.pas"/>
         <EditorIndex Value="-1"/>
         <TopLine Value="125"/>
         <CursorPos X="14" Y="162"/>
         <UsageCount Value="9"/>
-      </Unit63>
-      <Unit64>
+      </Unit62>
+      <Unit63>
         <Filename Value="../client/FBBlob.pas"/>
-        <EditorIndex Value="10"/>
+        <EditorIndex Value="-1"/>
         <TopLine Value="160"/>
         <CursorPos X="35" Y="176"/>
         <UsageCount Value="13"/>
-        <Loaded Value="True"/>
+      </Unit63>
+      <Unit64>
+        <Filename Value="../IBExternals.pas"/>
+        <EditorIndex Value="-1"/>
+        <TopLine Value="39"/>
+        <CursorPos X="74" Y="136"/>
+        <UsageCount Value="10"/>
       </Unit64>
     </Units>
-    <JumpHistory Count="30" HistoryIndex="29">
+    <JumpHistory Count="2" HistoryIndex="1">
       <Position1>
-        <Filename Value="../IB.pas"/>
-        <Caret Line="324" Column="40" TopLine="299"/>
+        <Filename Value="TestManager.pas"/>
+        <Caret Line="564" Column="22" TopLine="578"/>
       </Position1>
       <Position2>
-        <Filename Value="../IB.pas"/>
-        <Caret Line="354" Column="39" TopLine="328"/>
+        <Filename Value="TestManager.pas"/>
+        <Caret Line="728" Column="10" TopLine="722"/>
       </Position2>
-      <Position3>
-        <Filename Value="../IB.pas"/>
-        <Caret Line="381" Column="40" TopLine="355"/>
-      </Position3>
-      <Position4>
-        <Filename Value="../IB.pas"/>
-        <Caret Line="630" Column="70" TopLine="604"/>
-      </Position4>
-      <Position5>
-        <Filename Value="../IB.pas"/>
-        <Caret Line="646" Column="40" TopLine="620"/>
-      </Position5>
-      <Position6>
-        <Filename Value="../IB.pas"/>
-        <Caret Line="677" Column="47" TopLine="651"/>
-      </Position6>
-      <Position7>
-        <Filename Value="../IB.pas"/>
-        <Caret Line="695" Column="56" TopLine="669"/>
-      </Position7>
-      <Position8>
-        <Filename Value="../IB.pas"/>
-        <Caret Line="700" Column="48" TopLine="674"/>
-      </Position8>
-      <Position9>
-        <Filename Value="../IB.pas"/>
-        <Caret Line="732" Column="40" TopLine="706"/>
-      </Position9>
-      <Position10>
-        <Filename Value="../IB.pas"/>
-        <Caret Line="737" Column="63" TopLine="711"/>
-      </Position10>
-      <Position11>
-        <Filename Value="../IB.pas"/>
-        <Caret Line="808" Column="19" TopLine="782"/>
-      </Position11>
-      <Position12>
-        <Filename Value="../IB.pas"/>
-        <Caret Line="833" Column="16" TopLine="819"/>
-      </Position12>
-      <Position13>
-        <Filename Value="../IB.pas"/>
-        <Caret Line="288" TopLine="271"/>
-      </Position13>
-      <Position14>
-        <Filename Value="../IB.pas"/>
-        <Caret Line="197" Column="18" TopLine="181"/>
-      </Position14>
-      <Position15>
-        <Filename Value="../IB.pas"/>
-        <Caret Line="347" Column="7" TopLine="273"/>
-      </Position15>
-      <Position16>
-        <Filename Value="../IB.pas"/>
-        <Caret Line="1083" Column="67" TopLine="1066"/>
-      </Position16>
-      <Position17>
-        <Filename Value="../IB.pas"/>
-      </Position17>
-      <Position18>
-        <Filename Value="../IB.pas"/>
-        <Caret Line="674" Column="47" TopLine="647"/>
-      </Position18>
-      <Position19>
-        <Filename Value="../IB.pas"/>
-        <Caret Line="789" Column="25" TopLine="785"/>
-      </Position19>
-      <Position20>
-        <Filename Value="../IB.pas"/>
-      </Position20>
-      <Position21>
-        <Filename Value="../IB.pas"/>
-        <Caret Line="109" Column="35" TopLine="83"/>
-      </Position21>
-      <Position22>
-        <Filename Value="../IB.pas"/>
-        <Caret Line="220" Column="37" TopLine="203"/>
-      </Position22>
-      <Position23>
-        <Filename Value="../IB.pas"/>
-        <Caret Line="222" Column="45" TopLine="203"/>
-      </Position23>
-      <Position24>
-        <Filename Value="../IB.pas"/>
-        <Caret Line="225" Column="34" TopLine="203"/>
-      </Position24>
-      <Position25>
-        <Filename Value="../IB.pas"/>
-        <Caret Line="242" Column="36" TopLine="216"/>
-      </Position25>
-      <Position26>
-        <Filename Value="../client/FBAttachment.pas"/>
-        <Caret Line="162" TopLine="156"/>
-      </Position26>
-      <Position27>
-        <Filename Value="../client/FBAttachment.pas"/>
-        <Caret Line="192" Column="10" TopLine="177"/>
-      </Position27>
-      <Position28>
-        <Filename Value="../client/FBOutputBlock.pas"/>
-        <Caret Line="139" TopLine="136"/>
-      </Position28>
-      <Position29>
-        <Filename Value="../client/3.0/FB30Array.pas"/>
-        <Caret Line="91" TopLine="74"/>
-      </Position29>
-      <Position30>
-        <Filename Value="../client/2.5/FB25ClientAPI.pas"/>
-        <Caret Line="438" Column="122" TopLine="427"/>
-      </Position30>
     </JumpHistory>
   </ProjectSession>
 </CONFIG>
